testData/diagnostics/invalid_string_interp_2.diag.txt
ERROR: recursion in reader macro
testData/diagnostics/invalid_string_interp_2.nut:1:10

println($"{$"{2}"}");
          ^


